--- a/findly-builder/src/app/components/user-engagement/user-engagement.component.html
+++ b/findly-builder/src/app/components/user-engagement/user-engagement.component.html
@@ -105,8 +105,10 @@
                             <!-- <ng5-slider [(value)]="durationRange1" [(highValue)]="durationRange2" [options]="durationOptions" class="double_slider slider1" (userChangeEnd)="onUserChangeEnd('duration', $event, 'slider1')" (userChange)="onUserChange($event, 'slider1', true)"></ng5-slider> -->
                             <div class="row m-0 bottom-row col-12 ">
                                 <div class="slider-sec col-6 p-0">
+                                    <div class="label-hours">{{'metrics.user_engagement.Hours'| translate}}</div>
                                     <span class="span00">00</span>
-                                    <ng5-slider class="col-3" [(value)]="durationRange1" [(highValue)]="durationRange2" [options]="durationOptions" class="double_slider slider1" (userChangeEnd)="onUserChangeEnd('duration', $event, 'slider1')" (userChange)="onUserChange($event, 'slider1', true)"></ng5-slider>
+                                    <ng5-slider class="col-3" [(value)]="durationRange1" [(highValue)]="durationRange2" [options]="durationOptions" class="double_slider slider1" (userChangeEnd)="onUserChangeEnd('duration', $event, 'slider1')" (userChange)="onUserChange($event, 'slider1', true)"
+                                        placement="top-center" container='body' ngbTooltip="{{highValue - lowValue}} hrs"></ng5-slider>
                                     <span class="span24">24</span>
                                 </div>
                                 <div class="legend-sec col-6 p-0">
