--- a/findly-builder/src/app/components/user-engagement/user-engagement.component.scss
+++ b/findly-builder/src/app/components/user-engagement/user-engagement.component.scss
@@ -1,18 +1,18 @@
-.main-metrics-container{
+.main-metrics-container {
     background: #F8F9FB;
     height: calc(100vh - 61px);
-    .header-sec{
+    .header-sec {
         padding: 10px 30px;
         background: #F8F9FA;
         box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25);
         margin-bottom: 3px !important;
-        .bread-cum-sec{
-            .bread-name{
+        .bread-cum-sec {
+            .bread-name {
                 color: #9AA0A6;
                 font-weight: 500;
                 font-size: 14px;
                 line-height: 17px;
-                &.active-name{
+                &.active-name {
                     color: #000000;
                     font-weight: 500;
                     font-size: 18px;
@@ -21,76 +21,76 @@
                     top: 1px;
                 }
             }
-            img{
+            img {
                 margin: 0 10px;
                 position: relative;
                 top: 1px;
-            }            
+            }
         }
-        .date-info{
+        .date-info {
             color: #202124;
             font-size: 14px;
             line-height: 17px;
             font-weight: normal;
             margin-right: 12px;
-            .bold-text{
+            .bold-text {
                 font-weight: bold;
             }
         }
-        .date-select{
+        .date-select {
             background: #FFFFFF;
             border: 1px solid #E4E5E7;
             box-sizing: border-box;
             border-radius: 8px;
             padding: 3px 4px;
             margin-right: 16px;
-            .time{
+            .time {
                 background: #fff;
                 border-radius: 4px;
                 font-weight: normal;
                 font-size: 12px;
                 color: #202124;
-                padding: 3px 10px;                
+                padding: 3px 10px;
                 display: inline-block;
                 cursor: pointer;
-                &.selected{
+                &.selected {
                     background: #0D6EFD;
                     color: #ffffff;
                 }
             }
         }
-        .export{
+        .export {
             cursor: pointer;
         }
-    }   
-    .scroll_content{
+    }
+    .scroll_content {
         height: calc(100vh - 120px);
     }
-    .filter-dropdown{
+    .filter-dropdown {
         position: absolute;
         right: 20px;
         top: 15px;
         width: auto;
-        &.show{
-            .dropdown{
-                .dropdown-input{                   
-                    background: #EFF0F1;                                       
+        &.show {
+            .dropdown {
+                .dropdown-input {
+                    background: #EFF0F1;
                 }
             }
         }
-        .dropdown{
-            .dropdown-input{
+        .dropdown {
+            .dropdown-input {
                 border: 0;
                 height: 34px;
                 padding: 0 12px;
                 background: #ffffff;
                 border-radius: 4px;
-                &::before{
+                &::before {
                     display: none;
                 }
             }
         }
-        .content-menu{
+        .content-menu {
             background: #FFFFFF;
             box-shadow: 0px 10px 30px rgba(32, 33, 36, 0.3);
             border-radius: 4px;
@@ -99,94 +99,94 @@
             padding: 20px;
         }
     }
-    .data-information-content{        
-        .info-icon{
+    .data-information-content {
+        .info-icon {
             position: absolute;
             right: 15px;
             top: 10px;
             line-height: normal;
             cursor: pointer;
-            img{
+            img {
                 width: 12px;
                 height: 12px;
             }
-        }  
-        &.split-tables{
+        }
+        &.split-tables {
             padding: 10px 16px;
-        }            
-        .box-content{    
-            padding:5px 15px;     
-            position: relative;                 
-            .title-card{
+        }
+        .box-content {
+            padding: 5px 15px;
+            position: relative;
+            .title-card {
                 margin-bottom: 12px;
                 color: #202124;
                 font-weight: 500;
                 font-size: 16px;
-                line-height: 19px;                
-            }   
-            .paginations_list{
+                line-height: 19px;
+            }
+            .paginations_list {
                 display: flex;
                 align-items: center;
                 justify-content: flex-end;
                 margin: 20px 0 5px 0;
-                img{
+                img {
                     cursor: pointer;
                 }
-                span{
+                span {
                     padding: 0 5px;
                     cursor: pointer;
-                    &.active{
+                    &.active {
                         border-bottom: 1px solid #009dab;
                         color: #009dab;
                     }
                 }
             }
-            .count-sec{
-                .arrowsDiv{
-                    img{
+            .count-sec {
+                .arrowsDiv {
+                    img {
                         vertical-align: baseline;
                     }
                 }
-                .count{
+                .count {
                     color: #009dab;
                     font-size: 18px;
                     font-weight: normal;
                     padding: 0 10px;
                 }
-                .percentage{
+                .percentage {
                     color: #09a624;
                     font-size: 14px;
-                    &.red{
+                    &.red {
                         color: #FF001F;
                     }
                 }
             }
-            .table-content-data{               
-                .table_header{
+            .table-content-data {
+                .table_header {
                     padding: 15px 0;
                     box-shadow: inset 0px -1px 0px #E4E5E7;
-                    .header-title{
+                    .header-title {
                         padding: 0;
                         color: #9AA0A6;
                         font-weight: 500;
                         font-size: 14px;
-                        img{
-                            cursor: pointer;  
-                            vertical-align: baseline;                          
-                        }                        
+                        img {
+                            cursor: pointer;
+                            vertical-align: baseline;
+                        }
                     }
                 }
-                .table_body{
+                .table_body {
                     padding: 15px 0;
                     box-shadow: inset 0px -1px 0px #E4E5E7;
-                    .body-title{
+                    .body-title {
                         padding: 0;
                         overflow: hidden;
                         white-space: nowrap;
-                        text-overflow: ellipsis;     
+                        text-overflow: ellipsis;
                         color: #202124;
                         font-size: 14px;
-                        &.count{
+                        &.count {
                             color: #009DAB;
                         }
                     }
@@ -196,66 +196,67 @@
                     //     cursor: pointer;
                     // }
                 }
-            }            
-            .full-card{
+            }
+            .full-card {
                 padding: 28px 30px 50px 30px;
                 position: relative;
                 height: 100%;
                 background: #FFFFFF;
                 box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-                border-radius: 8px;                                                              
-            }            
-        }                
+                border-radius: 8px;
+            }
+        }
     }
-    .legends-info{
+    .legends-info {
         display: flex;
-        .content{
+        .content {
             padding: 10px 60px 10px 10px;
             background: #F8F9FA;
             border-radius: 4px;
-            &.no-bg{
+            &.no-bg {
                 background: transparent;
             }
-            .title{
+            .title {
                 color: #202124;
                 font-weight: 500;
                 font-size: 14px;
-                span{                    
+                span {
                     width: 48px;
                     display: inline-block;
                     margin-left: 10px;
                     // &.toatlsearches{
                     //     border-top: 4px solid #0D6EFD;
                     // }
-                    &.withresults{
+                    &.withresults {
                         border-top: 4px solid #0D6EFD;
                         border-radius: 6px;
                     }
-                    &.clicks{
+                    &.clicks {
                         border-top: 4px solid #FF784B;
                         border-radius: 6px;
                     }
-                }               
+                }
             }
-            .count-data{
+            .count-data {
                 padding-top: 10px;
-                .count{
+                .count {
                     font-weight: 600;
                     font-size: 20px;
                     line-height: 24px;
-                    img{
+                    img {
                         margin-right: 5px;
                         vertical-align: baseline;
                         background: #28A745;
                         margin: 0 0 0 8px;
                         border-radius: 100%;
                     }
-                }&.failed{
-                    img{
+                }
+                &.failed {
+                    img {
                         background: #DD3646;
                     }
                 }
-                .percentage{
+                .percentage {
                     font-weight: normal;
                     font-size: 14px;
                     line-height: 17px;
@@ -265,76 +266,76 @@
             }
         }
     }
-    .text-center{
+    .text-center {
         text-align: center!important;
     }
-    .slider-sec{
-        .span00{
+    .slider-sec {
+        .span00 {
             font-size: 12px;
             color: #9AA0A6;
             margin: 1px 0px 0px 80px;
         }
-        .span24{
+        .span24 {
             font-size: 12px;
             color: #9AA0A6;
         }
     }
-    ::ng-deep .ng5-slider{
+     ::ng-deep .ng5-slider {
         width: 50%;
         margin: 1px 10px 0px 10px;
-        .ng5-slider-pointer{
+        .ng5-slider-pointer {
             background: #FFFFFF;
             border: 1px solid #0D6EFD;
             width: 16px;
             height: 16px;
             top: -7px;
         }
-         .ng5-slider-selection {
+        .ng5-slider-selection {
             z-index: 2;
             background: #0D6EFD;
         }
     }
 }
 
-::ng-deep perfect-scrollbar .ps--active-y{
-    .ps__thumb-y{
+::ng-deep perfect-scrollbar .ps--active-y {
+    .ps__thumb-y {
         width: 3px !important;
     }
-    .ps__rail-y{
+    .ps__rail-y {
         width: 3px !important;
     }
-    .ps__thumb-x{
+    .ps__thumb-x {
         display: none !important;
     }
-    .ps__rail-x{
+    .ps__rail-x {
         display: none !important;
     }
 }
 
-.legends_sec_piechart{
+.legends_sec_piechart {
     display: flex;
     align-items: center;
     position: relative;
     bottom: 15%;
     left: 17%;
-    .legend-data{
-        .indication{
+    .legend-data {
+        .indication {
             width: 20px;
-            height: 20px;            
-            &.total{
+            height: 20px;
+            &.total {
                 background: #EAF6EC;
             }
-            &.feedback{
+            &.feedback {
                 background: #28A745;
             }
-            &.usefull{
+            &.usefull {
                 background: #FFF1ED;
             }
-            &.notusefull{
+            &.notusefull {
                 background: #FF784B;
             }
         }
-        .title{
+        .title {
             color: #202124;
             font-weight: normal;
             font-size: 12px;
@@ -344,25 +345,26 @@
     }
 }
 
-.pie-chart-graph{
+.pie-chart-graph {
     width: 180px;
     height: 180px;
     margin: 0 auto 28px auto;
     box-shadow: 0 -4px 18px 0 rgba(0, 0, 0, 0.1);
     border-radius: 100%;
 }
-.bottom-row{
-    .legend-sec{
+
+.bottom-row {
+    .legend-sec {
         display: flex;
-        .title{
+        .title {
             color: #26344A;
             font-weight: 500;
             font-size: 14px;
             line-height: 17px;
             margin-right: 25px;
         }
-        .legends-info{
-            .numbers{
+        .legends-info {
+            .numbers {
                 color: #9AA0A6;
                 font-weight: normal;
                 font-size: 10px;
@@ -370,36 +372,36 @@
                 text-align: center;
                 margin-top: 10px;
             }
-            .one{
-                .bg-color{
+            .one {
+                .bg-color {
                     width: 70px;
                     height: 20px;
                     background: #07377F;
                 }
             }
-            .two{
-                .bg-color{
+            .two {
+                .bg-color {
                     width: 70px;
                     height: 20px;
                     background: #0D6EFD;
                 }
             }
-            .three{
-                .bg-color{
+            .three {
+                .bg-color {
                     width: 70px;
                     height: 20px;
                     background: #85B7FE;
                 }
             }
-            .four{
-                .bg-color{
+            .four {
+                .bg-color {
                     width: 70px;
                     height: 20px;
-                    background:#E7F1FF;
+                    background: #E7F1FF;
                 }
             }
-            .five{
-                .bg-color{
+            .five {
+                .bg-color {
                     width: 70px;
                     height: 20px;
                     background: #F3F8FF;
@@ -415,10 +417,17 @@
     font-size: 12px !important;
     color: #202124 !important;
 }
-.ng5-slider.ng5-slider-bubble{
+
+.ng5-slider.ng5-slider-bubble {
     cursor: default;
     padding: 1px 3px;
     font-weight: bold !important;
     font-size: 12px !important;
     color: #202124 !important;
+}
+
+.label-hours {
+    padding-left: 5.7em;
+    font-size: 14px;
+    font-weight: 500;
 }
