--- a/findly-builder/src/app/components/bot-action/bot-action.component.html
+++ b/findly-builder/src/app/components/bot-action/bot-action.component.html
@@ -9,7 +9,7 @@
         <div class="col-4 p-0">Bot Actions</div>
         <div class="col-8 right-sec p-0">
           <div *ngIf="linkedBotID" class="modal-control-text" (click)="openBotsModalElement()">View All Bots</div>
-          <div class="clock"><img src="assets/icons/clock.svg"></div>
+          <div class="clock d-none"><img src="assets/icons/clock.svg"></div>
         </div>
       </div>
     </div>
