--- a/findly-builder/src/app/components/credentials-list/credentials-list.component.html
+++ b/findly-builder/src/app/components/credentials-list/credentials-list.component.html
@@ -2,10 +2,10 @@
     <div class="header-sec col-12 row m-0">
         <div class="col-4 p-0 title-header"> Manage Credentials</div>
          <div class="col-8 right-sec p-0">            
-                <div class="kr-sg-input-text m-0">
-                    <input type="text" placeholder="Search" autocomplete="off" class="input-search" placeholder="Search">
+                <div class="kr-sg-input-text m-0" [ngClass]="{'active': showSearch}">
+                    <input type="text" placeholder="Search" autocomplete="off" class="input-search" placeholder="Search" [(ngModel)]="searchcredential">
                 </div>
-                <div class="seach-block"><img src="assets/icons/search.svg"><img src="assets/images/close.svg" class="d-none">Search
+                <div class="seach-block"  (click)="toggleSearch()"><img *ngIf="!showSearch" src="assets/icons/search.svg"><img  *ngIf="showSearch" src="assets/images/close.svg" >Search
                 </div>
                 <div class="add_feild" (click)="newCredential()"><img src="assets/icons/add_plus.svg" >Add Credential
                 </div>
@@ -20,7 +20,7 @@
                 <div class="col-3 title">last updated<img src="assets/icons/dropdown_gray.svg" class="ml-1"></div>
                 <div class="col-3 title">last updated by</div>
             </div>
-            <div class="table-body-content row m-0 align-items-center" *ngFor="let data of channnelConguired">
+            <div class="table-body-content row m-0 align-items-center" *ngFor="let data of channnelConguired | filter :[searchcredential, 'appName']">
                 <div class="col-3 title">{{data.appName}}</div>
                 <div class="col-3 title">{{data.appUsage}}</div>
                 <div class="col-3 title">{{data.lastModifiedOn | dateFormatPipe: 'MM-DD-YYYY hh:mm A'}}</div>
