--- a/findly-builder/src/app/components/faq-source/faq-source.component.scss
+++ b/findly-builder/src/app/components/faq-source/faq-source.component.scss
@@ -1418,7 +1418,7 @@
                 }
             }
             .content-body{
-                padding: 9px 0;
+                padding: 9px 0px 0px 20px;
                 border-bottom: 1px solid #E4E5E7;
                 .col{
                     color: #202124;
