--- a/findly-builder/src/app/components/result-ranking/result-ranking.component.html
+++ b/findly-builder/src/app/components/result-ranking/result-ranking.component.html
@@ -110,10 +110,10 @@
                                         </div> 
                                     </div>
                                     <div *ngIf="!customizeList" class="empty-questions-selected divBlockEmptylastChild">
-                                        <div class="heading">{{'resultRanking.no_search_results' | translate}}</div>
+                                        <div class="heading"> {{'resultRanking.no_search_results' | translate}}</div> 
                                     </div>
                                 </div>
-                                <div class="pagination">
+                                <div class="pagination" *ngIf='totalRecord'>
                                     <app-record-pagination [totalRecord]='totalRecord' [limitpage]='limitpage' (pageChanged)="paginate($event)"></app-record-pagination>
                                 </div>
                                </ng-container>
