--- a/findly-builder/src/app/helpers/components/record-pagination/record-pagination.component.scss
+++ b/findly-builder/src/app/helpers/components/record-pagination/record-pagination.component.scss
@@ -2,7 +2,7 @@
     display: flex;
     align-items: center;
     justify-content: flex-end;
-    margin: 10px 0;
+    margin: -2px 5px;
     .first{
         margin-right: 8px;
         cursor: pointer;
